# xiph-static-build

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: test-build.yml
